redis_trial: add strace to Dockerfile and command, container to json payload

--- a/redis_trial/Dockerfile
+++ b/redis_trial/Dockerfile
@@ -3,4 +3,5 @@ FROM redis:7.2-bookworm
 RUN apt update && apt upgrade
 RUN apt install -y python3 python3-pip
 RUN apt install -y python3-websockets
+RUN apt install -y strace
 WORKDIR /src
